# cmtk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmtk.code-workspace
.obsidian/: workspace.json
include/: Chords.h  InterfaceGPT.h
src/: Arp.h  CMTK.h  Chord.cpp  Chord.h  ChordProgression.h  Chords.cpp  Chords.h  InterfaceGPT.cpp  InterfaceGPT.h  Interval.cpp  Interval.h  Note.cpp  Note.h  Roman.h  Scale.cpp  Scale.h  main.cpp
test/: main2.cpp
